--- a/HungryProject/src/main/resources/application.properties
+++ b/HungryProject/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/hungry
 spring.datasource.username=root
-spring.datasource.password=Barath@0410
+spring.datasource.password="duplicate"
 spring.jpa.properties.hibernate.format_sql=true
